--- a/KrausxRGA/UI/wndPONumber.xaml
+++ b/KrausxRGA/UI/wndPONumber.xaml
@@ -16,6 +16,8 @@
                                             <Border Height="45" Width="769" Background="#B2111111" Canvas.Top="1" Canvas.Left="-3">
                                                 <TextBlock TextWrapping="Wrap" Text="RMA Details" FontSize="25" Foreground="White" Margin="10,6,351,0"/>
                                             </Border>
+                                            
+                                            <CheckBox Height="33" Width="152" Canvas.Top="185" Canvas.Left="26" Content="In Progress" FontSize="25" IsEnabled="False" IsChecked="True"  x:Name="chkInProgress"/>
                                             <Label x:Name="lblcRMANumber" Content="RMA Number : " Style="{StaticResource lblConstant}" Canvas.Top="52" Width="189" Canvas.Left="205"/>
                                             <TextBox x:Name="txtRMANumber" IsEnabled="False" Canvas.Left="433"  FontSize="15" Foreground="Red"  Text="Generated after saving this information." Canvas.Top="49" Width="271" Height="33"  />
 
@@ -30,8 +32,8 @@
                                             <Label x:Name="lblcVendorName" Content="Vendor Name : " Style="{StaticResource lblConstant}" Canvas.Top="178" Width="169" Canvas.Left="223"/>
                                             <TextBox x:Name="txtVendorName"  Canvas.Left="435" Canvas.Top="161" Width="321" Height="62" FontSize="15" TextWrapping="Wrap" AcceptsReturn="True"   IsEnabled="False"/>
 
-                                            <Label x:Name="lblcRMAStatus" Content="RMA Status : " Style="{StaticResource lblConstant}" Canvas.Top="52" Width="150" Canvas.Left="28"/>
-                                            <ComboBox x:Name="cmbRMAStatus" Height="45" Width="213" Canvas.Left="10" Canvas.Top="85" Style="{StaticResource combo}" IsReadOnly="True" IsEnabled="False"
+                                            <Label x:Name="lblcRMAStatus" Content="RMA Status : " Style="{StaticResource lblConstant}" Canvas.Top="46" Width="150" Canvas.Left="28"/>
+                                            <ComboBox x:Name="cmbRMAStatus" Height="45" Width="213" Canvas.Left="12" Canvas.Top="67" Style="{StaticResource combo}" IsReadOnly="True" IsEnabled="False"
 													ItemsSource="{Binding RAMStatus}" DisplayMemberPath="Status" SelectedValuePath="ID" SelectedIndex="0" SelectedValue="-1" Foreground="#FF55BFB6" BorderBrush="#FF292929">
                                                 <ComboBox.Background>
                                                     <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
@@ -44,8 +46,8 @@
                                                 </ComboBox.Background>
                                             </ComboBox>
 
-                                            <Label x:Name="lblcRMADecision" Content="Decision : " Style="{StaticResource lblConstant}" Canvas.Top="141" Width="152" Canvas.Left="26"/>
-                                            <ComboBox x:Name="cmbRMADecision" Height="45" Width="213" Canvas.Left="10" Canvas.Top="170" Style="{StaticResource combo}" 
+                                            <Label x:Name="lblcRMADecision" Content="Decision : " Style="{StaticResource lblConstant}" Canvas.Top="113" Width="152" Canvas.Left="26"/>
+                                            <ComboBox x:Name="cmbRMADecision" Height="45" Width="213" Canvas.Left="12" Canvas.Top="136" Style="{StaticResource combo}" 
 													ItemsSource="{Binding RAMStatus}" SelectedValuePath="ID" DisplayMemberPath="Status" SelectedIndex="0" SelectedValue="-1" Foreground="#FF55BFB6" BorderBrush="#FF292929" >
                                                 <ComboBox.Background>
                                                     <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
@@ -187,16 +189,6 @@
                                                     <DataTemplate>
                                                         <StackPanel x:Name="spQty1" Width="40">
                                                             <TextBlock x:Name="tbQty" TextAlignment="Center" Width="40" Text="{Binding SKU_Qty_Seq}" FontSize="20" FontWeight="Bold"/>
-                                                            <!--<StackPanel x:Name="spQty2" Orientation="Horizontal">
-                                                                <Button x:Name="btnMinus" Content="-" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
-        															Width="40" Height="40" FontSize="12"
-        															Foreground="White" Background="#FF464646" 
-        															Click="btnMinus_Click" />
-                                                                <Button x:Name="btnPluse" Content="+" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" 
-        															Width="40" Height="40" 
-        															FontSize="12" Foreground="White" Background="#FF464646"
-        															Click="btnPluse_Click" />
-                                                            </StackPanel>-->
                                                         </StackPanel>
                                                     </DataTemplate>
                                                 </DataGridTemplateColumn.CellTemplate>
@@ -283,6 +275,19 @@
         										Header=""  
         										Width="" 
         										IsReadOnly="True" />
+
+                                            <DataGridTextColumn HeaderStyle="{StaticResource HeaderStyleKey}" 
+        										Binding="{Binding ShipmentLines}" 
+        										Header=""  
+        										Width="" 
+        										IsReadOnly="True" />
+
+                                            <DataGridTextColumn HeaderStyle="{StaticResource HeaderStyleKey}" 
+        										Binding="{Binding ReturnLines}" 
+        										Header=""  
+        										Width="" 
+        										IsReadOnly="True" />
+
                                         </DataGrid.Columns>
                                         <DataGrid.RowValidationErrorTemplate>
                                             <ControlTemplate>
