--- a/KrausxRGA/UI/wndPONumber.xaml
+++ b/KrausxRGA/UI/wndPONumber.xaml
@@ -100,8 +100,8 @@
                             </Border>
 
 
-                            <Border x:Name="bdrmain2" Height="337" >
-                                <Canvas x:Name="cvsTb1main2" Margin="0,5,10,5" Height="327">
+                            <Border x:Name="bdrmain2" Height="312" >
+                                <Canvas x:Name="cvsTb1main2" Margin="0,5,10,0">
                                     <!-- Grid View-->
                                     <!-- Grid View-->
 
@@ -138,7 +138,7 @@
         								BorderBrush="{x:Null}" 
         								HorizontalGridLinesBrush="#FF575757" 
         								VerticalGridLinesBrush="Gray"
-        								Height="289"  
+        								Height="263"  
         								SelectedIndex="-1" SelectionChanged="dgPackageInfo_SelectionChanged" Canvas.Top="38" 
                                            >
 
@@ -150,16 +150,16 @@
                                         </DataGrid.Resources>
 
                                         <DataGrid.Columns>
-                                            <DataGridTemplateColumn HeaderStyle="{StaticResource HeaderStyleKey}"   Header="Item" Width="62" >
+                                            <DataGridTemplateColumn HeaderStyle="{StaticResource HeaderStyleKey}"   Header="Select" Width="62" >
                                                 <DataGridTemplateColumn.CellTemplate>
                                                     <DataTemplate >
                                                         <Canvas x:Name="cvButtons" Background="White">
-                                                            <Button x:Name="btnRed" Width="60" Height="70" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="btnRed_Click" Style="{StaticResource ImageButton}">
+                                                            <Button x:Name="btnRed" Width="50" Height="60" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="btnRed_Click" Style="{StaticResource ImageButton}">
                                                                 <Button.Background>
                                                                     <ImageBrush Stretch="Fill" ImageSource="/KrausRGA;component/Images/Unchecked .png"/>
                                                                 </Button.Background>
                                                             </Button>
-                                                            <Button x:Name="btnGreen" Visibility="Hidden" Width="60" Height="70"  BorderBrush="{x:Null}" Foreground="{x:Null}" Style="{StaticResource ImageButton}"
+                                                            <Button x:Name="btnGreen" Visibility="Hidden" Width="50" Height="60"  BorderBrush="{x:Null}" Foreground="{x:Null}" Style="{StaticResource ImageButton}"
         														Click="btnGreen_Click" >
                                                                 <Button.Background>
                                                                     <ImageBrush Stretch="Fill" ImageSource="/KrausRGA;component/Images/Checked .png"/>
@@ -384,37 +384,60 @@
                                     <!--<ListBox x:Name="lstSKU" FontSize="30" Height="250" Canvas.Left="123" Canvas.Top="77" Width="471" Visibility="Hidden" SelectionChanged="lstSKU_SelectionChanged" />-->
                                 </Canvas>
                             </Border>
+                            <Label Content="Line Items Detail Below :" FontSize="25"></Label>
 
-                            <Border>
-                                <Canvas Height="471">
+                            <Border RenderTransformOrigin="0.501,0.516" Height="471">
+                                <Canvas Margin="-2,-18,2,31">
                                     <Border Width="790" CornerRadius="10" Canvas.Top="2" BorderBrush="#FF787878" BorderThickness="2,0,2,2" Height="361" >
                                         <Canvas Margin="-10,0,10,0" Name="CanvasConditions" IsEnabled="False">
                                             <Label Name="lblpoints" Height="39" Width="105" Canvas.Left="656" Canvas.Top="75" Visibility="Hidden"></Label>
 
                                             <Canvas  Height="54" Width="493" RenderTransformOrigin="2.093,1.173" Canvas.Left="227" Canvas.Top="12">
-                                                <Label Canvas.Left="8" Canvas.Top="-9" Name="lblItemIsNew" Content="Item is New" Style="{StaticResource lblConstant}" Width="167" Height="46" FontSize="30" ></Label>
-                                                <RadioButton Content="Yes" Name="btnBoxNew" Canvas.Left="199" Height="45" Width="75" FontSize="30" Checked="btnBoxNew_Checked_1" Canvas.Top="-8"/>
-                                                <RadioButton Content="No" Name="btnBoxNotNew" Canvas.Left="299" Canvas.Top="-9" Height="46" Width="104" FontSize="30" Checked="btnBoxNotNew_Checked_1" ></RadioButton>
+                                                <Label Canvas.Left="12" Canvas.Top="1" Name="lblItemIsNew" Content="Item is New" Style="{StaticResource lblConstant}" Width="167" Height="46" FontSize="30" ></Label>
+                                                <Viewbox Height="74" Canvas.Left="194" Width="117" Canvas.Top="-2">
+                                                   
+                                                <RadioButton Content="Yes" Name="btnBoxNew" Canvas.Left="199" Height="45" Width="75" FontSize="20" Checked="btnBoxNew_Checked_1" Canvas.Top="-8"/>
+                                                     </Viewbox>
+                                                <Viewbox Height="74" Canvas.Left="302" Canvas.Top="-2" Width="159">
+                                                <RadioButton Content="No" Name="btnBoxNotNew" Canvas.Left="299" Canvas.Top="-9" Height="46" Width="104" FontSize="20" Checked="btnBoxNotNew_Checked_1" ></RadioButton>
+                                                </Viewbox>
+
                                             </Canvas>
                                             <Canvas>
-                                                <Label Canvas.Left="123" Canvas.Top="197" Name="lblDefectontea" Content="Defect in Transite" Style="{StaticResource lblConstant}" Width="284" Height="43" FontSize="30" ></Label>
-                                                <RadioButton Content="Yes" Name="btntransiteYes" Canvas.Left="424" Canvas.Top="196" Height="44" Width="84" FontSize="30" Checked="btntransiteYes_Checked_1" IsEnabled="False"></RadioButton>
-                                                <RadioButton Content="No" Canvas.Left="530" Name="btntransiteNo" Canvas.Top="196" Height="42" Width="79" FontSize="30" Checked="btntransiteNo_Checked" IsEnabled="False" ></RadioButton>
+                                                <Label Canvas.Left="125" Canvas.Top="195" Name="lblDefectontea" Content="Defect in Transite" Style="{StaticResource lblConstant}" Width="284" Height="43" FontSize="30" ></Label>
+                                                <Viewbox Height="74" Canvas.Left="418" Canvas.Top="194" Width="135">
+                                                <RadioButton Content="Yes" Name="btntransiteYes" Canvas.Left="424" Canvas.Top="196" Height="44" Width="84" FontSize="20" Checked="btntransiteYes_Checked_1" IsEnabled="False"></RadioButton>
+                                                </Viewbox>
+                                                <Viewbox Height="74" Canvas.Top="194" Canvas.Left="530" Width="131">
+                                                <RadioButton Content="No" Canvas.Left="530" Name="btntransiteNo" Canvas.Top="196" Height="42" Width="79" FontSize="20" Checked="btntransiteNo_Checked" IsEnabled="False" ></RadioButton>
+                                                </Viewbox>
                                             </Canvas>
                                             <Canvas>
-                                                <Label Canvas.Left="164" Name="lblInstalled" Canvas.Top="46" Content="Installed" Style="{StaticResource lblConstant}" Width="241" Height="47" FontSize="30" ></Label>
-                                                <RadioButton Content="Yes" Canvas.Left="424" Canvas.Top="52" Name="btnInstalledYes" Height="45" Width="84" FontSize="30" Checked="btnInstalledYes_Checked_1"></RadioButton>
-                                                <RadioButton Content="No" Canvas.Left="529" Canvas.Top="53" Name="btnInstalledNo" Height="44" Width="84" FontSize="30" Checked="btnInstalledNo_Checked_1" ></RadioButton>
+                                                <Label Canvas.Left="166" Name="lblInstalled" Canvas.Top="54" Content="Installed" Style="{StaticResource lblConstant}" Width="241" Height="47" FontSize="30" ></Label>
+                                                <Viewbox Height="74" Canvas.Left="420" Canvas.Top="54" Width="133">
+                                                <RadioButton Content="Yes" Canvas.Left="424" Canvas.Top="52" Name="btnInstalledYes" Height="45" Width="84" FontSize="20" Checked="btnInstalledYes_Checked_1"></RadioButton>
+                                                </Viewbox>
+                                                <Viewbox Height="74" Canvas.Left="530" Canvas.Top="52" Width="130">
+                                                <RadioButton Content="No" Canvas.Left="529" Canvas.Top="53" Name="btnInstalledNo" Height="44" Width="84" FontSize="20" Checked="btnInstalledNo_Checked_1" ></RadioButton>
+                                                </Viewbox>
                                             </Canvas>
                                             <Canvas>
-                                                <Label Canvas.Left="14" Name="lblStatus" Canvas.Top="96" Content="Chip/Bended/Scratch/Broken" Style="{StaticResource lblConstant}" Width="396" Height="46" FontSize="30" ></Label>
-                                                <RadioButton Content="Yes"  Canvas.Left="427" Canvas.Top="97" Name="btnStatusYes" Height="49" Width="84" FontSize="30" Checked="btnStatusYes_Checked" ></RadioButton>
-                                                <RadioButton Content="No"  Canvas.Left="531" Canvas.Top="99" Name="btnStatusNo" Height="47" Width="84" FontSize="30" Checked="btnStatusNo_Checked"></RadioButton>
+                                                <Label Canvas.Left="16" Name="lblStatus" Canvas.Top="100" Content="Chip/Bended/Scratch/Broken" Style="{StaticResource lblConstant}" Width="396" Height="46" FontSize="30" ></Label>
+                                                <Viewbox Height="74" Canvas.Left="420" Canvas.Top="102">
+                                                <RadioButton Content="Yes"  Canvas.Left="427" Canvas.Top="97" Name="btnStatusYes" Height="49" Width="84" FontSize="20" Checked="btnStatusYes_Checked" ></RadioButton>
+                                                </Viewbox>
+                                                <Viewbox Height="74" Canvas.Left="530" Canvas.Top="100">
+                                                <RadioButton Content="No"  Canvas.Left="531" Canvas.Top="99" Name="btnStatusNo" Height="47" Width="84" FontSize="20" Checked="btnStatusNo_Checked"></RadioButton>
+                                                </Viewbox>
                                             </Canvas>
                                             <Canvas>
-                                                <Label Canvas.Left="40" Canvas.Top="143" Name="lblManufacturer" Content="Manufacturer Defective" Style="{StaticResource lblConstant}" Width="372" Height="48" FontSize="30" ></Label>
-                                                <RadioButton Content="Yes" Canvas.Left="426" IsEnabled="False" Canvas.Top="147" Name="btnManufacturerYes" Height="46" Width="84" FontSize="30" Checked="btnManufacturerYes_Checked"></RadioButton>
-                                                <RadioButton Content="No" Canvas.Left="529" Canvas.Top="147" IsEnabled="False" Name="btnManufacturerNo" Height="48" Width="98" FontSize="30" Checked="btnManufacturerNo_Checked"></RadioButton>
+                                                <Label Canvas.Left="42" Canvas.Top="147" Name="lblManufacturer" Content="Manufacturer Defective" Style="{StaticResource lblConstant}" Width="372" Height="48" FontSize="30" ></Label>
+                                                <Viewbox Height="74" Canvas.Top="146" Canvas.Left="418">
+                                                <RadioButton Content="Yes" Canvas.Left="426" IsEnabled="False" Canvas.Top="147" Name="btnManufacturerYes" Height="46" Width="84" FontSize="20" Checked="btnManufacturerYes_Checked"></RadioButton>
+                                                </Viewbox>
+                                                <Viewbox Height="74" Canvas.Left="530" Canvas.Top="146">
+                                                    <RadioButton Content="No" Canvas.Left="529" Canvas.Top="147" IsEnabled="False" Name="btnManufacturerNo" Height="48" Width="98" FontSize="20" Checked="btnManufacturerNo_Checked"></RadioButton>
+                                                </Viewbox>
                                             </Canvas>
                                             <Button Content="Done" Name="btnAdd" Canvas.Left="640" Canvas.Top="303" Width="119" Height="44" FontSize="20" Click="btnAdd_Click" ></Button>
                                             <ComboBox Canvas.Left="212" Canvas.Top="258" Width="392" Height="45" x:Name="cmbSkuReasons" ItemsSource="{Binding}" DisplayMemberPath="Reason1" SelectedValuePath="ReasonID" FontSize="25" SelectedIndex="0" SelectedValue="0" SelectionChanged="cmbSkuReasons_SelectionChanged_1"/>
@@ -541,7 +564,7 @@
                                             </ComboBox>
                                         </Canvas>
                                     </Border>-->
-                                    <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="410" Height="56" Width="234" Canvas.Left="556" >
+                                    <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="412" Height="56" Width="234" Canvas.Left="522" >
                                         <StackPanel Orientation="Horizontal">
                                             <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoSave.png" MouseDown="btnHomeDone_Click" Width="59"/>
                                             <Button Style="{StaticResource ToolBarButtonBaseStyle}"
@@ -550,7 +573,12 @@
                                     			Click="btnHomeDone_Click" Width="169"  />
                                         </StackPanel>
                                     </Border>
-
+                                    <Border Visibility="Hidden" x:Name="brdPrint" Style="{StaticResource bdrWin8btn}" Canvas.Top="408" Height="56" Width="234" Canvas.Left="272" >
+                                        <StackPanel Orientation="Horizontal">
+                                            <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoSave.png" MouseDown="btnPrint_Click_1" Width="59"/>
+                                            <Button Style="{StaticResource ToolBarButtonBaseStyle}" x:Name="btnPrint" Content="Print" Click="btnPrint_Click_1" Width="169"  />
+                                        </StackPanel>
+                                    </Border>
                                     <Border Visibility="Visible" Style="{StaticResource bdrWin8btn}" Canvas.Top="412" Height="56" Width="218" Canvas.Left="6" >
                                         <StackPanel Orientation="Horizontal">
                                             <Image Style="{StaticResource btnImage}"  MouseDown="btnback_Click" Source="/KrausRGA;component/Images/bac.png" Width="36"/>
